Fix white space issue under content area Change grid-template-rows and grid-template-columns in .projects and .main-content

--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@ body {
   background-color: #e2e6ea;
   color: #333;
   line-height: 1.6;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 4.5fr;
+  grid-template-rows: auto 1fr;
 }
 
 .sidebar {
@@ -24,6 +26,7 @@ body {
   color: white;
   padding: 20px;
   grid-row: 1/3;
+  grid-column: 1/2;
   display: grid;
   grid-template-rows: auto auto 1fr;
   gap: 30px;
@@ -47,6 +50,8 @@ header {
   background-color: white;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
   padding: 20px 40px;
+  grid-row: 1/2;
+  grid-column: 2/3;
   display: grid;
   grid-template-rows: auto auto;
   grid-template-columns: 3fr 1fr;
@@ -121,9 +126,11 @@ header button {
 }
 
 .main-content {
+  grid-row: 2/3;
+  grid-column: 2/3;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 0.5fr auto;
+  grid-template-rows: auto auto;
   gap: 20px;
   padding: 20px;
 }
@@ -138,8 +145,7 @@ h3 {
 
 .projects {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: 0.1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
